--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,7 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TicTacToeDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TicTacToeDB_v2;Trusted_Connection=True;MultipleActiveResultSets=true",
+        "TicTacToeContextConnection": "Server=(localdb)\\mssqllocaldb;Database=TicTacToe_v2;Trusted_Connection=True;MultipleActiveResultSets=true"
     }
 }
